Flask-app_aws-sample.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: "FLASK-APP_sample-aws"

Parameters:
  ec2imageID:
    Description: "Please enter ami for ec2. By default, as of 20230416, the latest version of the free frame that can be selected from the AWS console is set."
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  Keypair:
    Description: Keypair input
    Type: AWS::EC2::KeyPair::KeyName

  AvZoneA:
    Description: Please specify az-A
    Type: String
    Default: ap-northeast-1a
  AvZoneB:
    Description: Please specify az-B
    Type: String
    Default: ap-northeast-1c

  VpcCIDR:
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 10.10.0.0/16
  AZ1PublicSubnetCIDR:
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 10.10.1.0/24
  AZ1PrivateSubnetCIDR:
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 10.10.11.0/24
  AZ2PublicSubnetCIDR:
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 10.10.2.0/24
  AZ2PrivateSubnetCIDR:
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 10.10.12.0/24

  AllowedIp:
    Description: "Although it is possible to allow all with 0.0.0.0/0. It is recommended to allow only your environment. Example: xxx.xxx.xxx.xxx/32"
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: "0.0.0.0/0"

  dbusername:
    Description: Specify mysql user name.
    Type: String
    Default: "admin"
  dbuserpass:
    Description: Specify mysql password.
    Type: String
    Default: "adminadmin"
    NoEcho: 'true'

Resources:
  cfVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - 
        Key: Name
        Value: CF-VPC
  cfIGW:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: Name
        Value: CF-IGW
  cfATGW:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref cfIGW
      VpcId: !Ref cfVPC

  cfSubnet01aPub:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Ref AvZoneA
      CidrBlock: !Ref AZ1PublicSubnetCIDR
      MapPublicIpOnLaunch	: 'true'
      Tags:
      - Key: Name
        Value: subnet01apub
      VpcId: !Ref cfVPC

  cfSubnet01cPub:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Ref AvZoneB
      CidrBlock: !Ref AZ2PublicSubnetCIDR
      MapPublicIpOnLaunch	: 'true'
      Tags:
      - Key: Name
        Value: subnet01cpub
      VpcId: !Ref cfVPC

  cfSubnet01aPli:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Ref AvZoneA
      CidrBlock: !Ref AZ1PrivateSubnetCIDR
      MapPublicIpOnLaunch	: 'false'
      Tags:
      - Key: Name
        Value: subnet01apli
      VpcId: !Ref cfVPC

  cfSubnet01cPli:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Ref AvZoneB
      CidrBlock: !Ref AZ2PrivateSubnetCIDR
      MapPublicIpOnLaunch	: 'false'
      Tags:
      - Key: Name
        Value: subnet01cpli
      VpcId: !Ref cfVPC

  cfRouteTable01aPub:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
      - Key: Name
        Value: RouteTable01apub
      VpcId: !Ref cfVPC

  cfRouteTableAssociation01aPub:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref cfRouteTable01aPub
      SubnetId: !Ref cfSubnet01aPub

  cfRoute01aPub:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref cfIGW
      RouteTableId: !Ref cfRouteTable01aPub

  cfRouteTable01cPub:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
      - Key: Name
        Value: RouteTable01cpub
      VpcId: !Ref cfVPC

  cfRouteTableAssociation01cPub:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref cfRouteTable01cPub
      SubnetId: !Ref cfSubnet01cPub

  cfRoute01cPub:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref cfIGW
      RouteTableId: !Ref cfRouteTable01cPub

  cfRouteTable01aPli:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
      - Key: Name
        Value: RouteTable01apli
      VpcId: !Ref cfVPC

  cfRouteTableAssociation01aPli:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref cfRouteTable01aPli
      SubnetId: !Ref cfSubnet01aPli

  cfRouteTable01cPli:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
      - Key: Name
        Value: RouteTable01cpli
      VpcId: !Ref cfVPC

  cfRouteTableAssociation01cPli:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref cfRouteTable01cPli
      SubnetId: !Ref cfSubnet01cPli


  ec2cfnSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ec2cfnsg
      VpcId: !Ref cfVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref AllowedIp
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref albcnfSecurityGroup
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5000
        CidrIp: !Ref AllowedIp
      Tags:
      - Key: Name
        Value: ec2-cnf-sg

  albcnfSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: albcnfsg
      GroupName: albcnfsg
      VpcId: !Ref cfVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref AllowedIp
      Tags:
      - Key: Name
        Value: alb-cnf-sg

  rdscnfSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: rdscnfsg
      GroupName: rdscnfsg
      VpcId: !Ref cfVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref ec2cfnSecurityGroup
      Tags:
        - Key: Name
          Value: rds-cnf-sg

  RDScfnSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: "RDS_private_subnet"
      DBSubnetGroupName: "RDS_private_subnet"
      SubnetIds:
      - !Ref cfSubnet01aPli
      - !Ref cfSubnet01cPli
      Tags:
      -
        Key: "Name"
        Value: "dbsubnet"

  RDScfnInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      DBInstanceIdentifier: "cfn-rds"
      DBInstanceClass: "db.t3.micro"
      Engine: "mysql"
      EngineVersion: "8.0.39"
      MasterUsername: !Ref dbusername
      MasterUserPassword: !Ref dbuserpass
      DBName: "sample_app_test_db"
      BackupRetentionPeriod: 0
      MultiAZ: true
      PubliclyAccessible: false
      StorageType: "gp2"
      AllocatedStorage: 20
      StorageEncrypted: true
      CopyTagsToSnapshot: false
      DeletionProtection: false
      DeleteAutomatedBackups: true
      DBSubnetGroupName: !Ref RDScfnSubnetGroup
      VPCSecurityGroups:
      - !Ref rdscnfSecurityGroup
      Tags:
      -
        Key: "Name"
        Value: "cfn-rds"
    DeletionPolicy: Delete


  cnfEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ec2imageID
      InstanceType: t2.micro
      SubnetId: !Ref cfSubnet01aPub
      SecurityGroupIds:
      - !Ref ec2cfnSecurityGroup
      KeyName: !Ref Keypair
      Tags:
      -
        Key: "Name"
        Value: "cfn-ec2"

  cnfalb:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name: "cnfalb"
      Scheme: "internet-facing"
      Type: "application"
      Subnets: 
      - !Ref cfSubnet01aPub
      - !Ref cfSubnet01cPub
      SecurityGroups: 
      - !Ref albcnfSecurityGroup
      IpAddressType: "ipv4"
      Tags:
      -
        Key: "Name"
        Value: "cnfalb"

  cnftg:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Name: "cnftg"
      VpcId: !Ref cfVPC
      Protocol: "HTTP"
      ProtocolVersion: "HTTP1"
      Port: 80
      TargetType: "instance"
      Targets: 
      - 
        Id: !Ref cnfEC2Instance
        Port: 80
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthCheckProtocol: "HTTP"
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 2
      Matcher: 
        HttpCode: "200"
      Tags:
      -
        Key: "Name"
        Value: "cnftg"


  ListenerResource:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref cnfalb
      Port: 80
      Protocol: "HTTP"
      DefaultActions: 
      - 
        TargetGroupArn: !Ref cnftg
        Type: "forward"
